--- a/alacritty.yml
+++ b/alacritty.yml
@@ -92,13 +92,13 @@
 font:
   # Normal (roman) font face
   normal:
-    family: Ubuntu Mono
+    family: Iosevka SS07
   bold:
-    family: Ubuntu Mono
+    family: Iosevka SS07
   italic:
-    family: Ubuntu Mono
+    family: Iosevka SS07
   bold_italic:
-    family: Ubuntu Mono
+    family: Iosevka SS07
   size: 12.0
 
     # The `style` can be specified to pick a specific face.
@@ -191,9 +191,9 @@ font:
   #
   # Colors which should be used to draw the terminal cursor. If these are unset,
   # the cursor color will be the inverse of the cell color.
-  #cursor:
-  #  text: '#000000'
-  #  cursor: '#ffffff'
+cursor:
+  text: '#000000'
+  cursor: '#ffffff'
 
   # Selection colors
   #
