--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,4 +13,6 @@ set -g @plugin 'jimeh/tmux-themepack'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-set -g @themepack 'basic'
+# neovim + tmux true color solution
+set -g default-terminal 'screen-256color'
+set -ga terminal-overrides ',*256col*:Tc'
