--- a/alacritty.yml
+++ b/alacritty.yml
@@ -191,9 +191,9 @@ font:
   #
   # Colors which should be used to draw the terminal cursor. If these are unset,
   # the cursor color will be the inverse of the cell color.
-cursor:
-  text: '#000000'
-  cursor: '#ffffff'
+  #cursor:
+  #  text: '#000000'
+  #  cursor: '#ffffff'
 
   # Selection colors
   #
