--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+# fix: delay issue when pressed ESC in vim
 set -sg escape-time 0
 
 # List of plugins
@@ -5,12 +6,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'jimeh/tmux-themepack'
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# prefix + I to fetch when first started
 run '~/.tmux/plugins/tpm/tpm'
 
 # neovim + tmux true color solution
