--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -92,14 +92,14 @@
 font:
   # Normal (roman) font face
   normal:
-    family: Iosevka SS07
+    family: Iosevka SS12
   bold:
-    family: Iosevka SS07
+    family: Iosevka SS12
   italic:
-    family: Iosevka SS07
+    family: Iosevka SS12
   bold_italic:
-    family: Iosevka SS07
-  size: 11.0
+    family: Iosevka SS12
+  size: 12.0
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -172,36 +172,34 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
-# Colors (Gruvbox dark)
+# Colors (Tender)
 colors:
   # Default colors
   primary:
-    # hard contrast: background = '0x1d2021'
     background: '0x282828'
-    # soft contrast: background = '0x32302f'
-    foreground: '0xebdbb2'
+    foreground: '0xeeeeee'
 
   # Normal colors
   normal:
     black:   '0x282828'
-    red:     '0xcc241d'
-    green:   '0x98971a'
-    yellow:  '0xd79921'
-    blue:    '0x458588'
-    magenta: '0xb16286'
-    cyan:    '0x689d6a'
-    white:   '0xa89984'
+    red:     '0xf43753'
+    green:   '0xc9d05c'
+    yellow:  '0xffc24b'
+    blue:    '0xb3deef'
+    magenta: '0xd3b987'
+    cyan:    '0x73cef4'
+    white:   '0xeeeeee'
 
   # Bright colors
   bright:
-    black:   '0x928374'
-    red:     '0xfb4934'
-    green:   '0xb8bb26'
-    yellow:  '0xfabd2f'
-    blue:    '0x83a598'
-    magenta: '0xd3869b'
-    cyan:    '0x8ec07c'
-    white:   '0xebdbb2'
+    black:   '0x4c4c4c'
+    red:     '0xf43753'
+    green:   '0xc9d05c'
+    yellow:  '0xffc24b'
+    blue:    '0xb3deef'
+    magenta: '0xd3b987'
+    cyan:    '0x73cef4'
+    white:   '0xfeffff'
 
 # Visual Bell
 #
