--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,3 +13,26 @@ run '~/.tmux/plugins/tpm/tpm'
 # neovim + tmux true color solution
 set -g default-terminal 'screen-256color'
 set -ga terminal-overrides ',*256col*:Tc'
+
+# https://gist.github.com/spicycode/1229612
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+setw -g monitor-activity on
+
+# set prefix key to ctrl+w
+set -g prefix C-w
+
+bind-key v split-window -h
+bind-key s split-window -v
+
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
+
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
