--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,6 @@ set -sg escape-time 0
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'jimeh/tmux-themepack'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # prefix + I to fetch when first started
@@ -20,9 +19,6 @@ set-window-option -g automatic-rename on
 set-option -g set-titles on
 setw -g monitor-activity on
 
-# set prefix key to ctrl+w
-set -g prefix C-w
-
 bind-key v split-window -h
 bind-key s split-window -v
 
@@ -36,3 +32,13 @@ bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
+
+# customized version of https://github.com/geohot/configuration/blob/master/.tmux.conf
+set -g status-position bottom
+set -g status-bg colour234
+set -g status-fg colour137
+set -g status-left ''
+set -g status-interval 1
+set -g status-right '#[fg=colour123] #H #[fg=colour144]%d/%m #[fg=colour144]%T '
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
