--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -1,7 +1,10 @@
 window:
   padding:
-    x: 5
-    y: 5
+    x: 0
+    y: 0
+  dimensions:
+    columns: 80
+    lines: 24
 
 # Font configuration
 font:
