--- a/kitty.conf
+++ b/kitty.conf
@@ -5,6 +5,8 @@ bold_italic_font auto
 
 font_size 11.0
 
+disable_ligatures always
+
 remember_window_size  no
 initial_window_width  580
 initial_window_height 400
