--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,6 @@ set -g status-bg colour234
 set -g status-fg colour137
 set -g status-left ''
 set -g status-interval 1
-set -g status-right '#[fg=colour123] #H #[fg=colour144]%d/%m #[fg=colour144]%T '
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+set -g status-right '#[fg=colour123] #H #[fg=colour214]%d/%m #[fg=colour144]%T '
+setw -g window-status-current-format '#[fg=colour123] #I#[fg=colour241]:#[fg=colour255]#W#[fg=colour159]#F '
+setw -g window-status-format '#[fg=colour241]#I#[fg=colour237]:#[fg=colour246]#W#[fg=colour244]#F '
