--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,9 +38,13 @@ bind-key L resize-pane -R 5
 # customized version of https://github.com/geohot/configuration/blob/master/.tmux.conf
 set -g status-position bottom
 set -g status-bg colour234
-set -g status-fg colour137
+set -g status-fg colour249
 set -g status-left ''
 set -g status-interval 1
 set -g status-right '#[fg=colour123] #H #[fg=colour214]%d/%m #[fg=colour144]%T '
-setw -g window-status-current-format '#[fg=colour123] #I#[fg=colour241]:#[fg=colour255]#W#[fg=colour159]#F '
-setw -g window-status-format '#[fg=colour241]#I#[fg=colour237]:#[fg=colour246]#W#[fg=colour244]#F '
+set -g window-status-activity-style 'bg=colour117,fg=colour234'
+set -g window-status-bell-style 'bg=colour125,fg=colour234'
+set -g window-status-last-style 'bg=colour234,fg=colour252'
+setw -g window-status-current-format '#[bg=colour234,fg=colour123] #I#[fg=colour241]:#[fg=colour255]#W#[fg=colour159]#F '
+setw -g window-status-format ' #I:#W#F '
+
