--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ set -sg escape-time 0
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # prefix + I to fetch when first started
