--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -9,18 +9,21 @@
   <match>
     <test name="family"><string>sans-serif</string></test>
     <edit name="family" mode="prepend" binding="strong">
+      <string>Ubuntu</string>
       <string>Unifont</string>
     </edit>
   </match>
   <match>
     <test name="family"><string>serif</string></test>
     <edit name="family" mode="prepend" binding="strong">
+      <string>DejaVu Serif</string>
       <string>Unifont</string>
     </edit>
   </match>
   <match>
     <test name="family"><string>monospace</string></test>
     <edit name="family" mode="prepend" binding="strong">
+      <string>Ubuntu Mono</string>
       <string>Unifont</string>
     </edit>
   </match>
