--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,13 +39,13 @@ bind-key L resize-pane -R 5
 # customized version of https://github.com/geohot/configuration/blob/master/.tmux.conf
 set -g status-position bottom
 set -g status-bg colour234
-set -g status-fg colour249
+set -g status-fg colour238
 set -g status-left ''
 set -g status-interval 1
-set -g status-right '#[fg=colour123] #H #[fg=colour214]%d/%m #[fg=colour144]%T '
+set -g status-right '#[fg=colour159] #H #[fg=colour243]%d/%m %T '
 set -g window-status-activity-style 'bg=colour117,fg=colour234'
 set -g window-status-bell-style 'bg=colour125,fg=colour234'
-set -g window-status-last-style 'bg=colour234,fg=colour252'
-setw -g window-status-current-format '#[bg=colour234,fg=colour123] #I#[fg=colour241]:#[fg=colour255]#W#[fg=colour159]#F '
+set -g window-status-last-style 'bg=colour234,fg=colour244'
+setw -g window-status-current-format '#[bg=colour235,fg=colour159] #I#[fg=colour240]:#[fg=colour255]#W#[fg=colour159]#F '
 setw -g window-status-format ' #I:#W#F '
 
