init.vim, tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,8 +13,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 run '~/.tmux/plugins/tpm/tpm'
 
 # neovim + tmux true color solution
-set -g default-terminal 'screen-256color'
-set -ga terminal-overrides ',*256col*:Tc'
+# set -g default-terminal 'screen-256color'
+# set -ga terminal-overrides ',*256col*:Tc'
 
 # https://gist.github.com/spicycode/1229612
 # Automatically set window title
@@ -48,4 +48,3 @@ set -g window-status-bell-style 'bg=colour125,fg=colour234'
 set -g window-status-last-style 'bg=colour234,fg=colour244'
 setw -g window-status-current-format '#[bg=colour235,fg=colour159] #I#[fg=colour240]:#[fg=colour255]#W#[fg=colour159]#F '
 setw -g window-status-format ' #I:#W#F '
-
