init.vim, kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,15 +1,15 @@
-font_family      Iosevka SS12
-bold_font        Iosevka ss12 bold
+font_family      Iosevka Term SS09 Medium
+bold_font        Iosevka Term SS09 Bold
 italic_font      auto
 bold_italic_font auto
 
-font_size 11.0
+font_size 14.0
 
 disable_ligatures always
 
 remember_window_size  no
-initial_window_width  580
-initial_window_height 400
+initial_window_width  1416
+initial_window_height 1721
 
 sync_to_monitor yes
 window_border_width 0
@@ -37,4 +37,4 @@ color6                #67d9f0
 color14               #55ffff
 color7                #f2f2f2
 color15               #ffffff
-selection_foreground #000000
+selection_foreground  #000000
