--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,11 +1,15 @@
-font_family      Iosevka Term SS09 Medium
-bold_font        Iosevka Term SS09 Bold
-italic_font      auto
-bold_italic_font auto
+# font_family      Iosevka Term SS09 Medium
+# bold_italic_font auto
+#
+# font_size 14.0
+#
+# disable_ligatures always
 
-font_size 14.0
+font_family      Hack FC Ligatured Regular
+italic_font      Hack FC Ligatured Regular
+bold_font        Hack FC Ligatured Bold
 
-disable_ligatures always
+font_size 13.0
 
 remember_window_size  no
 initial_window_width  1416
@@ -17,24 +21,46 @@ draw_minimal_borders no
 
 url_style curly
 
-background            #000000
-foreground            #bbbbbb
-cursor                #bbbbbb
-selection_background  #545454
-color0                #000000
-color8                #545454
-color1                #e52222
-color9                #ff5555
-color2                #a6e32d
-color10               #55ff55
-color3                #fc951e
-color11               #ffff55
-color4                #c48dff
-color12               #5555ff
-color5                #fa2573
-color13               #ff55ff
-color6                #67d9f0
-color14               #55ffff
-color7                #f2f2f2
-color15               #ffffff
-selection_foreground  #000000
+# background            #000000
+# foreground            #bbbbbb
+# cursor                #bbbbbb
+# selection_background  #545454
+# color0                #000000
+# color8                #545454
+# color1                #e52222
+# color9                #ff5555
+# color2                #a6e32d
+# color10               #55ff55
+# color3                #fc951e
+# color11               #ffff55
+# color4                #c48dff
+# color12               #5555ff
+# color5                #fa2573
+# color13               #ff55ff
+# color6                #67d9f0
+# color14               #55ffff
+# color7                #f2f2f2
+# color15               #ffffff
+# selection_foreground  #000000
+
+background #111111
+foreground #dedede
+cursor #ffa460
+selection_background #464d91
+color0 #919191
+color8 #bdbdbd
+color1 #e17373
+color9 #ffa0a0
+color2 #94b978
+color10 #bddeab
+color3 #ffb97b
+color11 #ffdba0
+color4 #96bddb
+color12 #b1d7f6
+color5 #e1c0fa
+color13 #fbdaff
+color6 #00988e
+color14 #19b2a7
+color7 #dedede
+color15 #ffffff
+selection_foreground #111111
