init.vim and tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,9 @@
 set -g mouse on
+set -g status-keys vi
+bind-key / copy-mode
+bind -T copy-mode-vi 'v' send -X begin-selection
+bind -T copy-mode-vi 'y' send -X copy-pipe "'' | xclip && xclip -i -selection clipboard"
+
 
 # fix: delay issue when pressed ESC in vim
 set -sg escape-time 0
@@ -8,13 +13,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# prefix + I to fetch when first started
-run '~/.tmux/plugins/tpm/tpm'
-
 # neovim + tmux true color solution
-# set -g default-terminal 'screen-256color'
-# set -ga terminal-overrides ',*256col*:Tc'
+set -g default-terminal 'screen-256color'
+set -ga terminal-overrides ',*256col*:Tc'
 
 # https://gist.github.com/spicycode/1229612
 # Automatically set window title
@@ -48,3 +49,7 @@ set -g window-status-bell-style 'bg=colour125,fg=colour234'
 set -g window-status-last-style 'bg=colour234,fg=colour244'
 setw -g window-status-current-format '#[bg=colour235,fg=colour159] #I#[fg=colour240]:#[fg=colour255]#W#[fg=colour159]#F '
 setw -g window-status-format ' #I:#W#F '
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# prefix + I to fetch when first started
+run '~/.tmux/plugins/tpm/tpm'
