--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,11 +5,8 @@
 #
 # disable_ligatures always
 
-font_family      Hack FC Ligatured Regular
-italic_font      Hack FC Ligatured Regular
-bold_font        Hack FC Ligatured Bold
-
-font_size 13.0
+font_family      Ubuntu Mono Ligaturized
+font_size 17.0
 
 remember_window_size  no
 initial_window_width  1416
@@ -20,6 +17,10 @@ window_border_width 0
 draw_minimal_borders no
 
 url_style curly
+
+map ctrl+shift+kp_add change_font_size all +1.0
+map ctrl+shift+kp_subtract change_font_size all -1.0
+map ctrl+shift+backspace change_font_size all 17.0
 
 # background            #000000
 # foreground            #bbbbbb
@@ -43,24 +44,46 @@ url_style curly
 # color15               #ffffff
 # selection_foreground  #000000
 
-background #111111
-foreground #dedede
-cursor #ffa460
-selection_background #464d91
-color0 #919191
-color8 #bdbdbd
-color1 #e17373
-color9 #ffa0a0
-color2 #94b978
-color10 #bddeab
-color3 #ffb97b
-color11 #ffdba0
-color4 #96bddb
-color12 #b1d7f6
-color5 #e1c0fa
-color13 #fbdaff
-color6 #00988e
-color14 #19b2a7
-color7 #dedede
+#background #111111
+#foreground #dedede
+#cursor #ffa460
+#selection_background #464d91
+#color0 #919191
+#color8 #bdbdbd
+#color1 #e17373
+#color9 #ffa0a0
+#color2 #94b978
+#color10 #bddeab
+#color3 #ffb97b
+#color11 #ffdba0
+#color4 #96bddb
+#color12 #b1d7f6
+#color5 #e1c0fa
+#color13 #fbdaff
+#color6 #00988e
+#color14 #19b2a7
+#color7 #dedede
+#color15 #ffffff
+#selection_foreground #111111
+
+background #0e1419
+foreground #e5e1cf
+cursor #f19618
+selection_background #243340
+color0 #000000
+color8 #323232
+color1 #ff3333
+color9 #ff6565
+color2 #b8cc52
+color10 #e9fe83
+color3 #e6c446
+color11 #fff778
+color4 #36a3d9
+color12 #68d4ff
+color5 #f07078
+color13 #ffa3aa
+color6 #95e5cb
+color14 #c7fffc
+color7 #ffffff
 color15 #ffffff
-selection_foreground #111111
+selection_foreground #0e1419
