--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,12 +1,16 @@
-# font_family      Iosevka Term SS09 Medium
-# bold_italic_font auto
-#
-# font_size 14.0
-#
+font_family      SF Mono Medium
+bold_font        SF Mono Bold
+bold_italic_font auto
+
+font_size 15.0
+
 # disable_ligatures always
 
-font_family      Ubuntu Mono Ligaturized
-font_size 17.0
+# font_family      Hack FC Ligatured Regular
+# italic_font      Hack FC Ligatured Regular
+# bold_font        Hack FC Ligatured Bold
+#
+# font_size 15.0
 
 remember_window_size  no
 initial_window_width  1416
@@ -16,74 +20,32 @@ sync_to_monitor yes
 window_border_width 0
 draw_minimal_borders no
 
+cursor_blink_interval 0
+
 url_style curly
 
 map ctrl+shift+kp_add change_font_size all +1.0
 map ctrl+shift+kp_subtract change_font_size all -1.0
-map ctrl+shift+backspace change_font_size all 17.0
+map ctrl+shift+backspace change_font_size all 15.0
 
-# background            #000000
-# foreground            #bbbbbb
-# cursor                #bbbbbb
-# selection_background  #545454
-# color0                #000000
-# color8                #545454
-# color1                #e52222
-# color9                #ff5555
-# color2                #a6e32d
-# color10               #55ff55
-# color3                #fc951e
-# color11               #ffff55
-# color4                #c48dff
-# color12               #5555ff
-# color5                #fa2573
-# color13               #ff55ff
-# color6                #67d9f0
-# color14               #55ffff
-# color7                #f2f2f2
-# color15               #ffffff
-# selection_foreground  #000000
-
-#background #111111
-#foreground #dedede
-#cursor #ffa460
-#selection_background #464d91
-#color0 #919191
-#color8 #bdbdbd
-#color1 #e17373
-#color9 #ffa0a0
-#color2 #94b978
-#color10 #bddeab
-#color3 #ffb97b
-#color11 #ffdba0
-#color4 #96bddb
-#color12 #b1d7f6
-#color5 #e1c0fa
-#color13 #fbdaff
-#color6 #00988e
-#color14 #19b2a7
-#color7 #dedede
-#color15 #ffffff
-#selection_foreground #111111
-
-background #0e1419
-foreground #e5e1cf
-cursor #f19618
-selection_background #243340
-color0 #000000
-color8 #323232
-color1 #ff3333
-color9 #ff6565
-color2 #b8cc52
-color10 #e9fe83
-color3 #e6c446
-color11 #fff778
-color4 #36a3d9
-color12 #68d4ff
-color5 #f07078
-color13 #ffa3aa
-color6 #95e5cb
-color14 #c7fffc
-color7 #ffffff
-color15 #ffffff
-selection_foreground #0e1419
+background            #000000
+foreground            #ffffff
+cursor                #ffffff
+selection_background  #b4d5ff
+color0                #868686
+color8                #545454
+color1                #ff6600
+color9                #ff0000
+color2                #ccff04
+color10               #00ff00
+color3                #ffcc00
+color11               #ffff00
+color4                #44b3cc
+color12               #0000ff
+color5                #9933cc
+color13               #ff00ff
+color6                #44b3cc
+color14               #00ffff
+color7                #f4f4f4
+color15               #e5e5e5
+selection_foreground #000000
