--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,10 @@
-font_family      SF Mono Medium
-bold_font        SF Mono Bold
+font_family      SFMono Medium Nerd Font Complete
+bold_font        SFMono Bold Nerd Font Complete
 bold_italic_font auto
+
+# font_family      SF Mono Medium
+# bold_font        SF Mono Bold
+# bold_italic_font auto
 
 font_size 15.0
 
