--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,6 @@ bind-key / copy-mode
 bind -T copy-mode-vi 'v' send -X begin-selection
 bind -T copy-mode-vi 'y' send -X copy-pipe "'' | xclip && xclip -i -selection clipboard"
 
-
 # fix: delay issue when pressed ESC in vim
 set -sg escape-time 0
 
@@ -22,6 +21,11 @@ set -ga terminal-overrides ',*256col*:Tc'
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 setw -g monitor-activity on
+
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
 bind-key v split-window -h
 bind-key s split-window -v
