--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,12 +1,17 @@
-font_family      SFMono Medium Nerd Font Complete
-bold_font        SFMono Bold Nerd Font Complete
-bold_italic_font auto
+# font_family      JetBrains Mono NL Medium
+# bold_font        JetBrains Mono NL Bold
+# bold_italic_font auto
+# font_size 16.0
 
-# font_family      SF Mono Medium
-# bold_font        SF Mono Bold
+# font_family      SFMono Medium Nerd Font Complete Windows Compatible
+# bold_font        SFMono Bold Nerd Font Complete Windows Compatible
 # bold_italic_font auto
 
-font_size 15.0
+font_family      Liga SFMono NF Medium
+bold_font        Liga SFMono NF Bold
+bold_italic_font auto
+font_size 16.0
+
 
 # disable_ligatures always
 
@@ -30,26 +35,26 @@ url_style curly
 
 map ctrl+shift+kp_add change_font_size all +1.0
 map ctrl+shift+kp_subtract change_font_size all -1.0
-map ctrl+shift+backspace change_font_size all 15.0
+map ctrl+shift+backspace change_font_size all 16.0
 
-background #000000
-foreground #dedede
-cursor #ffa460
-selection_background #464d91
-color0 #919191
-color8 #bdbdbd
-color1 #e17373
-color9 #ffa0a0
-color2 #94b978
-color10 #bddeab
-color3 #ffb97b
-color11 #ffdba0
-color4 #96bddb
-color12 #b1d7f6
-color5 #e1c0fa
-color13 #fbdaff
-color6 #00988e
-color14 #19b2a7
-color7 #dedede
-color15 #ffffff
+background            #000000
+foreground            #ffffff
+cursor                #ffffff
+selection_background  #b4d5ff
+color0                #868686
+color8                #545454
+color1                #ff6600
+color9                #ff0000
+color2                #ccff04
+color10               #00ff00
+color3                #ffcc00
+color11               #ffff00
+color4                #44b3cc
+color12               #0000ff
+color5                #9933cc
+color13               #ff00ff
+color6                #44b3cc
+color14               #00ffff
+color7                #f4f4f4
+color15               #e5e5e5
 selection_foreground #000000
