Updated: coc-settings.json .config/kitty/kitty.conf

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,19 +7,17 @@
 # bold_font        SFMono Bold Nerd Font Complete Windows Compatible
 # bold_italic_font auto
 
-font_family      Liga SFMono NF Medium
-bold_font        Liga SFMono NF Bold
-bold_italic_font auto
-font_size 16.0
+# font_family      Liga SFMono NF Medium
+# bold_font        Liga SFMono NF Bold
+# bold_italic_font auto
+# font_size 17.0
 
+disable_ligatures always
 
-# disable_ligatures always
-
-# font_family      Hack FC Ligatured Regular
-# italic_font      Hack FC Ligatured Regular
-# bold_font        Hack FC Ligatured Bold
-#
-# font_size 15.0
+font_family      Hack NF Regular
+italic_font      Hack NF Regular
+bold_font        Hack NF Bold
+font_size 18.0
 
 remember_window_size  no
 initial_window_width  1416
@@ -35,7 +33,7 @@ url_style curly
 
 map ctrl+shift+kp_add change_font_size all +1.0
 map ctrl+shift+kp_subtract change_font_size all -1.0
-map ctrl+shift+backspace change_font_size all 16.0
+map ctrl+shift+backspace change_font_size all 18.0
 
 background            #000000
 foreground            #ffffff
