--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
-# font_family      JetBrains Mono NL Medium
-# bold_font        JetBrains Mono NL Bold
-# bold_italic_font auto
-# font_size 16.0
+font_family      JetBrains Mono Medium Nerd Font Complete
+bold_font        JetBrains Mono Bold Nerd Font Complete
+bold_italic_font auto
+font_size 15.0
 
 # font_family      SFMono Medium Nerd Font Complete Windows Compatible
 # bold_font        SFMono Bold Nerd Font Complete Windows Compatible
@@ -12,12 +12,12 @@
 # bold_italic_font auto
 # font_size 17.0
 
-disable_ligatures always
-
-font_family      Hack NF Regular
-italic_font      Hack NF Regular
-bold_font        Hack NF Bold
-font_size 18.0
+# disable_ligatures always
+#
+# font_family      Hack NF Regular
+# italic_font      Hack NF Regular
+# bold_font        Hack NF Bold
+# font_size 18.0
 
 remember_window_size  no
 initial_window_width  1416
@@ -33,7 +33,7 @@ url_style curly
 
 map ctrl+shift+kp_add change_font_size all +1.0
 map ctrl+shift+kp_subtract change_font_size all -1.0
-map ctrl+shift+backspace change_font_size all 18.0
+map ctrl+shift+backspace change_font_size all 15.0
 
 background            #000000
 foreground            #ffffff
