Updated: .config/kitty/kitty.conf .config/nvim/init.lua

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -35,7 +35,7 @@ map ctrl+shift+kp_add change_font_size all +1.0
 map ctrl+shift+kp_subtract change_font_size all -1.0
 map ctrl+shift+backspace change_font_size all 15.0
 
-background            #000000
+background            #1f1f24
 foreground            #ffffff
 cursor                #ffffff
 selection_background  #b4d5ff
