--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -3,51 +3,66 @@ window:
     x: 0
     y: 0
   dimensions:
-    columns: 80
-    lines: 24
+    columns: 90
+    lines: 60
+
+env:
+  TERM: xterm-256color
 
 # Font configuration
 font:
   # Normal (roman) font face
   normal:
-    family: Iosevka SS12
+    family: FiraCode Nerd Font Mono
+    style: Retina
   bold:
-    family: Iosevka SS12
+    family: FiraCode Nerd Font Mono
   italic:
-    family: Iosevka SS12
+    family: FiraCode Nerd Font Mono
   bold_italic:
-    family: Iosevka SS12
-  size: 11.0
+    family: FiraCode Nerd Font Mono
+  size: 12.0
+  offset:
+    x: 0
+    y: 0
 
+# Colors (Wombat)
 colors:
   # Default colors
   primary:
-    background: '0x272822'
-    foreground: '0xf1ebeb'
+    background: '#1f1f1f'
+    foreground: '#e5e1d8'
 
   # Normal colors
   normal:
-    black:   '0x48483e'
-    red:     '0xdc2566'
-    green:   '0x8fc029'
-    yellow:  '0xd4c96e'
-    blue:    '0x55bcce'
-    magenta: '0x9358fe'
-    cyan:    '0x56b7a5'
-    white:   '0xacada1'
+    black:   '#000000'
+    red:     '#f7786d'
+    green:   '#bde97c'
+    yellow:  '#efdfac'
+    blue:    '#6ebaf8'
+    magenta: '#ef88ff'
+    cyan:    '#90fdf8'
+    white:   '#e5e1d8'
 
   # Bright colors
   bright:
-    black:   '0x76715e'
-    red:     '0xfa2772'
-    green:   '0xa7e22e'
-    yellow:  '0xe7db75'
-    blue:    '0x66d9ee'
-    magenta: '0xae82ff'
-    cyan:    '0x66efd5'
-    white:   '0xcfd0c2'
+    black:   '#b4b4b4'
+    red:     '#f99f92'
+    green:   '#e3f7a1'
+    yellow:  '#f2e9bf'
+    blue:    '#b3d2ff'
+    magenta: '#e5bdff'
+    cyan:    '#c2fefa'
+    white:   '#ffffff'
 
-background_opacity: 1.0
+cursor:
+  # Cursor style
+  #
+  # Values for 'style':
+  #   - ▇ Block
+  #   - _ Underline
+  #   - | Beam
+  style: Block
 
 key_bindings:
   - { key: F11, action: ToggleFullscreen }
