--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,10 +10,12 @@ set -sg escape-time 0
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
 
-# neovim + tmux true color solution
-set -g default-terminal 'screen-256color'
-set -ga terminal-overrides ',*256col*:Tc'
+# for tmux 3.2, you can use the following setting instead:
+set -as terminal-features ",xterm-256color:RGB"
 
 # https://gist.github.com/spicycode/1229612
 # Automatically set window title
