--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -5,6 +5,7 @@ window:
   dimensions:
     columns: 90
     lines: 60
+  decorations: full
 
 env:
   TERM: xterm-256color
@@ -13,18 +14,21 @@ env:
 font:
   # Normal (roman) font face
   normal:
-    family: FiraCode Nerd Font Mono
-    style: Retina
+    family: Iosevka Nerd Font Mono
+    style: Regular
   bold:
-    family: FiraCode Nerd Font Mono
+    family: Iosevka Nerd Font Mono
+    style: Bold
   italic:
-    family: Menlo
+    family: Iosevka Nerd Font Mono
+    style: Italic
   bold_italic:
-    family: Menlo
-  size: 15.0
+    family: Iosevka Nerd Font Mono
+    style: Bold Italic
+  size: 17.0
   offset:
     x: 0
-    y: 4
+    y: 1
   # OS X only: use thin stroke font rendering. Thin strokes are suitable
   # for retina displays, but for non-retina you probably want this set to
   # false.
@@ -34,34 +38,33 @@ font:
 draw_bold_text_with_bright_colors: true
 dynamic_title: true
 
-# Colors (Tomorrow Night Bright)
-colors:
-  # Default colors
-  primary:
-    background: '0x000000'
-    foreground: '0xeaeaea'
+# Default colors
+primary:
+  background: '0x1d2021' # hard contrast
+  # background: '0x282828' # normal contrast
+  foreground: '0xebdbb2'
 
-  # Normal colors
-  normal:
-    black:   '0x000000'
-    red:     '0xd54e53'
-    green:   '0xb9ca4a'
-    yellow:  '0xe6c547'
-    blue:    '0x7aa6da'
-    magenta: '0xc397d8'
-    cyan:    '0x70c0ba'
-    white:   '0x424242'
+# Normal colors
+normal:
+  black:   '0x282828'
+  red:     '0xcc241d'
+  green:   '0x98971a'
+  yellow:  '0xd79921'
+  blue:    '0x458588'
+  magenta: '0xb16286'
+  cyan:    '0x689d6a'
+  white:   '0xa89984'
 
-  # Bright colors
-  bright:
-    black:   '0x666666'
-    red:     '0xff3334'
-    green:   '0x9ec400'
-    yellow:  '0xe7c547'
-    blue:    '0x7aa6da'
-    magenta: '0xb77ee0'
-    cyan:    '0x54ced6'
-    white:   '0x2a2a2a'
+# Bright colors
+bright:
+  black:   '0x928374'
+  red:     '0xfb4934'
+  green:   '0xb8bb26'
+  yellow:  '0xfabd2f'
+  blue:    '0x83a598'
+  magenta: '0xd3869b'
+  cyan:    '0x8ec07c'
+  white:   '0xebdbb2'
 
 cursor:
   # Cursor style
