Updated: .config/nvim/ginit.vim .DS_Store .alacritty.yml .config/.DS_Store .config/nvim/.DS_Store .config/nvim/coc-settings.json .config/nvim/lua/plugins.lua .config/nvim/lua/settings.lua .config/nvim/lua/treesitter.lua .zshrc coc-settings.json coc-settings.json

--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -14,21 +14,21 @@ env:
 font:
   # Normal (roman) font face
   normal:
-    family: Iosevka Nerd Font Mono
+    family: JetBrainsMono Nerd Font Mono
     style: Regular
   bold:
-    family: Iosevka Nerd Font Mono
+    family: JetBrainsMono Nerd Font Mono
     style: Bold
   italic:
-    family: Iosevka Nerd Font Mono
+    family: JetBrainsMono Nerd Font Mono
     style: Italic
   bold_italic:
-    family: Iosevka Nerd Font Mono
+    family: JetBrainsMono Nerd Font Mono
     style: Bold Italic
-  size: 17.0
+  size: 18.0
   offset:
     x: 0
-    y: 1
+    y: 4
   # OS X only: use thin stroke font rendering. Thin strokes are suitable
   # for retina displays, but for non-retina you probably want this set to
   # false.
