--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -19,5 +19,13 @@
     "svelte",
     "json"
   ],
-  "svelte.enable-ts-plugin": true
+  "svelte.enable-ts-plugin": true,
+  "Lua.diagnostics.globals": ["vim"],
+  "Lua.workspace.library": {
+    "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime": true,
+    "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime/lua": true,
+    "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime/lua/vim": true,
+    "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime/lua/vim/lsp": true
+  },
+  "eslint.autoFixOnSave": true
 }
