--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -17,15 +17,18 @@
     "typescript",
     "typescriptreact",
     "svelte",
-    "json"
+    "json",
+    "scss"
   ],
   "svelte.enable-ts-plugin": true,
+  "sumneko-lua.enableNvimLuaDev": true,
   "Lua.diagnostics.globals": ["vim"],
-  "Lua.workspace.library": {
-    "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime": true,
-    "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime/lua": true,
-    "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime/lua/vim": true,
-    "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime/lua/vim/lsp": true
-  },
+  "Lua.telemetry.enable": false,
+  "Lua.workspace.library": [
+    "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime",
+    "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime/lua",
+    "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime/lua/vim",
+    "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime/lua/vim/lsp"
+  ],
   "eslint.autoFixOnSave": true
 }
