--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -14,25 +14,25 @@ env:
 font:
   # Normal (roman) font face
   normal:
-    family: JetBrainsMono Nerd Font Mono
-    style: Regular
+    family: BlexMono Nerd Font Mono
+    style: Text
   bold:
-    family: JetBrainsMono Nerd Font Mono
+    family: BlexMono Nerd Font Mono
     style: Bold
   italic:
-    family: JetBrainsMono Nerd Font Mono
+    family: BlexMono Nerd Font Mono
     style: Italic
   bold_italic:
-    family: JetBrainsMono Nerd Font Mono
+    family: BlexMono Nerd Font Mono
     style: Bold Italic
-  size: 18.0
-  offset:
-    x: 0
-    y: 4
+  size: 16.0
+    #offset:
+    #  x: 0
+    #  y: 3
   # OS X only: use thin stroke font rendering. Thin strokes are suitable
   # for retina displays, but for non-retina you probably want this set to
   # false.
-  use_thin_strokes: true
+  # use_thin_strokes: true
 
 # When true, bold text is drawn using the bright variant of colors.
 draw_bold_text_with_bright_colors: true
@@ -44,27 +44,27 @@ primary:
   # background: '0x282828' # normal contrast
   foreground: '0xebdbb2'
 
-# Normal colors
-normal:
-  black:   '0x282828'
-  red:     '0xcc241d'
-  green:   '0x98971a'
-  yellow:  '0xd79921'
-  blue:    '0x458588'
-  magenta: '0xb16286'
-  cyan:    '0x689d6a'
-  white:   '0xa89984'
-
-# Bright colors
-bright:
-  black:   '0x928374'
-  red:     '0xfb4934'
-  green:   '0xb8bb26'
-  yellow:  '0xfabd2f'
-  blue:    '0x83a598'
-  magenta: '0xd3869b'
-  cyan:    '0x8ec07c'
-  white:   '0xebdbb2'
+    # # Normal colors
+    # normal:
+    #   black:   '0x282828'
+    #   red:     '0xcc241d'
+    #   green:   '0x98971a'
+    #   yellow:  '0xd79921'
+    #   blue:    '0x458588'
+    #   magenta: '0xb16286'
+    #   cyan:    '0x689d6a'
+    #   white:   '0xa89984'
+    #
+    # # Bright colors
+    # bright:
+    #   black:   '0x928374'
+    #   red:     '0xfb4934'
+    #   green:   '0xb8bb26'
+    #   yellow:  '0xfabd2f'
+    #   blue:    '0x83a598'
+    #   magenta: '0xd3869b'
+    #   cyan:    '0x8ec07c'
+    #   white:   '0xebdbb2'
 
 cursor:
   # Cursor style
@@ -74,6 +74,29 @@ cursor:
   #   - _ Underline
   #   - | Beam
   style: Block
+
+colors:
+  primary:
+    foreground: '#ECE1D7'
+    background: '#292522'
+  normal:
+    black:   '#34302C'
+    red:     '#BD8183'
+    green:   '#78997A'
+    yellow:  '#E49B5D'
+    blue:    '#7F91B2'
+    magenta: '#B380B0'
+    cyan:    '#7B9695'
+    white:   '#C1A78E'
+  bright:
+    black:   '#867462'
+    red:     '#D47766'
+    green:   '#85B695'
+    yellow:  '#EBC06D'
+    blue:    '#A3A9CE'
+    magenta: '#CF9BC2'
+    cyan:    '#89B3B6'
+    white:   '#ECE1D7'
 
 key_bindings:
   - { key: F11, action: ToggleFullscreen }
