--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,7 +15,8 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 
 # for tmux 3.2, you can use the following setting instead:
-set -as terminal-features ",xterm-256color:RGB"
+set -as terminal-features ",screen-256color:RGB"
+set-option -sa terminal-overrides ',screen-256color:RGB'
 
 # https://gist.github.com/spicycode/1229612
 # Automatically set window title
