--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -1,12 +1,15 @@
 window:
+  opacity: 1
   padding:
     x: 0
     y: 0
   dimensions:
     columns: 90
     lines: 60
-  decorations: full
+  decorations:
+    full
 
+    #1945x1495
 env:
   TERM: xterm-256color
 
@@ -14,57 +17,84 @@ env:
 font:
   # Normal (roman) font face
   normal:
-    family: BlexMono Nerd Font Mono
-    style: Text
+    family: Liga SFMono NF
+    style: Medium
   bold:
-    family: BlexMono Nerd Font Mono
+    family: Liga SFMono NF
     style: Bold
   italic:
-    family: BlexMono Nerd Font Mono
+    family: Liga SFMono NF
     style: Italic
   bold_italic:
-    family: BlexMono Nerd Font Mono
+    family: Liga SFMono NF
     style: Bold Italic
-  size: 16.0
-    #offset:
-    #  x: 0
-    #  y: 3
-  # OS X only: use thin stroke font rendering. Thin strokes are suitable
-  # for retina displays, but for non-retina you probably want this set to
-  # false.
-  # use_thin_strokes: true
+  size: 14.0
+  offset:
+    x: 0
+    y: 2
 
 # When true, bold text is drawn using the bright variant of colors.
-draw_bold_text_with_bright_colors: true
+draw_bold_text_with_bright_colors: false
 dynamic_title: true
 
-# Default colors
-primary:
-  background: '0x1d2021' # hard contrast
-  # background: '0x282828' # normal contrast
-  foreground: '0xebdbb2'
+  ## Colors (Gruvbox dark)
+  #colors:
+  #  # Default colors
+  #  primary:
+  #    # hard contrast: background = '0x1d2021'
+  #    background: "0x1d2021"
+  #    # soft contrast: background = '0x32302f'
+  #    foreground: "0xebdbb2"
+  #
+  #  # Normal colors
+  #  normal:
+  #    black: "0x282828"
+  #    red: "0xcc241d"
+  #    green: "0x98971a"
+  #    yellow: "0xd79921"
+  #    blue: "0x458588"
+  #    magenta: "0xb16286"
+  #    cyan: "0x689d6a"
+  #    white: "0xa89984"
+  #
+  #  # Bright colors
+  #  bright:
+  #    black: "0x928374"
+  #    red: "0xfb4934"
+  #    green: "0xb8bb26"
+  #    yellow: "0xfabd2f"
+  #    blue: "0x83a598"
+  #    magenta: "0xd3869b"
+  #    cyan: "0x8ec07c"
+  #    white: "0xebdbb2"
 
-    # # Normal colors
-    # normal:
-    #   black:   '0x282828'
-    #   red:     '0xcc241d'
-    #   green:   '0x98971a'
-    #   yellow:  '0xd79921'
-    #   blue:    '0x458588'
-    #   magenta: '0xb16286'
-    #   cyan:    '0x689d6a'
-    #   white:   '0xa89984'
-    #
-    # # Bright colors
-    # bright:
-    #   black:   '0x928374'
-    #   red:     '0xfb4934'
-    #   green:   '0xb8bb26'
-    #   yellow:  '0xfabd2f'
-    #   blue:    '0x83a598'
-    #   magenta: '0xd3869b'
-    #   cyan:    '0x8ec07c'
-    #   white:   '0xebdbb2'
+# Colors (Hyper)
+colors:
+  primary:
+    background: '#000000'
+    foreground: '#FFFFFF'
+
+  # Normal Colours
+  normal:
+    black:   '#1a1a1a'
+    red:     '#f4005f'
+    green:   '#98e024'
+    yellow:  '#fa8419'
+    blue:    '#9d65ff'
+    magenta: '#f4005f'
+    cyan:    '#58d1eb'
+    white:   '#c4c5b5'
+
+  # Bright Colours
+  bright:
+    black:   '#625e4c'
+    red:     '#f4005f'
+    green:   '#98e024'
+    yellow:  '#e0d561'
+    blue:    '#9d65ff'
+    magenta: '#f4005f'
+    cyan:    '#58d1eb'
+    white:   '#f6f6ef'
 
 cursor:
   # Cursor style
@@ -74,29 +104,6 @@ cursor:
   #   - _ Underline
   #   - | Beam
   style: Block
-
-colors:
-  primary:
-    foreground: '#ECE1D7'
-    background: '#292522'
-  normal:
-    black:   '#34302C'
-    red:     '#BD8183'
-    green:   '#78997A'
-    yellow:  '#E49B5D'
-    blue:    '#7F91B2'
-    magenta: '#B380B0'
-    cyan:    '#7B9695'
-    white:   '#C1A78E'
-  bright:
-    black:   '#867462'
-    red:     '#D47766'
-    green:   '#85B695'
-    yellow:  '#EBC06D'
-    blue:    '#A3A9CE'
-    magenta: '#CF9BC2'
-    cyan:    '#89B3B6'
-    white:   '#ECE1D7'
 
 key_bindings:
   - { key: F11, action: ToggleFullscreen }
