--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -7,19 +7,10 @@
     }
   },
   "coc.preferences.currentFunctionSymbolAutoUpdate": true,
-  "coc.preferences.formatOnSaveFiletypes": [
-    "cs",
-    "graphql",
-    "go",
-    "javascript",
-    "javascriptreact",
-    "lua",
-    "typescript",
-    "typescriptreact",
-    "svelte",
-    "json",
-    "scss"
-  ],
+  "coc.preferences.formatOnSave": true,
+  "prettier.enable": true,
+  "prettier.requireConfig": false,
+  "prettier.useEditorConfig": false,
   "svelte.enable-ts-plugin": true,
   "sumneko-lua.enableNvimLuaDev": true,
   "Lua.diagnostics.globals": ["vim"],
@@ -30,5 +21,5 @@
     "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime/lua/vim",
     "/opt/homebrew/Cellar/neovim/0.7.0/share/nvim/runtime/lua/vim/lsp"
   ],
-  "eslint.autoFixOnSave": true
+  "eslint.autoFixOnSave": false
 }
