Updated: .config/nvim/ginit.vim .config/nvim/vimscriptconfs/init.vim .config/nvim/vimscriptconfs/old.init.vim .config/.DS_Store .config/nvim/.DS_Store .config/nvim/coc-settings.json .config/nvim/init.lua .config/nvim/init.vim .config/nvim/init.vim .config/nvim/lua/augroups.lua .config/nvim/lua/augroups.lua .config/nvim/lua/fzf.lua .config/nvim/lua/fzf.lua .config/nvim/lua/grep-quickfixlist.lua .config/nvim/lua/grep-quickfixlist.lua .config/nvim/lua/mappings.lua .config/nvim/lua/mappings.lua .config/nvim/lua/plugins.lua .config/nvim/lua/plugins.lua .config/nvim/lua/settings.lua .config/nvim/lua/settings.lua .config/nvim/lua/statusline.lua .config/nvim/lua/statusline.lua .config/nvim/lua/telescope-settings.lua .config/nvim/lua/telescope-settings.lua .config/nvim/lua/treesitter.lua .config/nvim/lua/treesitter.lua .config/nvim/lua/utils.lua .config/nvim/lua/utils.lua

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -9,7 +9,7 @@
   "coc.preferences.currentFunctionSymbolAutoUpdate": true,
   "coc.preferences.formatOnSave": true,
   "prettier.enable": true,
-  "prettier.requireConfig": false,
+  "prettier.requireConfig": true,
   "prettier.useEditorConfig": false,
   "svelte.enable-ts-plugin": true,
   "sumneko-lua.enableNvimLuaDev": true,
